--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-  <title>Piedra, Papel o Tijera - Le Wagon</title>
+  <title>Piedra, Papel o Tijera - EDLS</title>
 </head>
 <body>
     <div class="contenedor">
@@ -61,7 +61,7 @@
 
       <!-- Pie de página -->
       <div class="footer">
-        Hecho con ❤️ por <a href="#">Le Wagon</a>.
+        Hecho por <a href="#">Enrique De Los Santos</a>.
       </div>
     </div>
 
